[gd_scene load_steps=19 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://assets/img_fundoChao.png" type="Texture" id=2]
[ext_resource path="res://scripts/personagem.gd" type="Script" id=3]
[ext_resource path="res://assets/felpudoIdle.png" type="Texture" id=4]
[ext_resource path="res://assets/felpudoBate.png" type="Texture" id=5]
[ext_resource path="res://assets/grave.png" type="Texture" id=6]
[ext_resource path="res://scripts/bar.gd" type="Script" id=7]
[ext_resource path="res://assets/barra_recipiente.png" type="Texture" id=8]
[ext_resource path="res://assets/barra.png" type="Texture" id=9]
[ext_resource path="res://assets/Heart.png" type="Texture" id=10]
[ext_resource path="res://assets/font140.fnt" type="BitmapFont" id=11]
[ext_resource path="res://assets/font.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://assets/star.png" type="Texture" id=13]
[ext_resource path="res://assets/cross.png" type="Texture" id=14]

[sub_resource type="Animation" id=1]

resource/name = "ToStrike"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Strike:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=2]

font/size = 30
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 12 )

[sub_resource type="DynamicFont" id=3]

font/size = 30
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 12 )

[sub_resource type="DynamicFont" id=4]

font/size = 30
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 12 )

[node name="Game" type="Node"]

script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

transform/pos = Vector2( -143.816, -32.6416 )
transform/scale = Vector2( 1.0248, 2.06938 )
texture = ExtResource( 2 )
centered = false

[node name="Personagem" type="Node2D" parent="."]

transform/pos = Vector2( 220, 1070 )
z/z = 1
script/script = ExtResource( 3 )

[node name="Idle" type="Sprite" parent="Personagem"]

transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Strike" type="Sprite" parent="Personagem"]

visibility/visible = false
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Grave" type="Sprite" parent="Personagem"]

visibility/visible = false
transform/pos = Vector2( -46, 40 )
transform/scale = Vector2( 0.2075, 0.1454 )
texture = ExtResource( 6 )
flip_h = true
modulate = Color( 0.486275, 0.254902, 0.00784313, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Personagem"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/ToStrike = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Camera" type="Camera2D" parent="."]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="Barrels" type="Node2D" parent="."]

[node name="DestinationBarrels" type="Node2D" parent="."]

[node name="Bar" type="Node2D" parent="."]

transform/pos = Vector2( 360, 100 )
transform/scale = Vector2( 3, 3 )
script/script = ExtResource( 7 )

[node name="Border" type="Sprite" parent="Bar"]

texture = ExtResource( 8 )

[node name="TimeBar" type="Sprite" parent="Bar"]

texture = ExtResource( 9 )
region = true
region_rect = Rect2( 0, 0, 188, 23 )

[node name="Life1" type="Sprite" parent="Bar"]

transform/pos = Vector2( -108.722, -25.7012 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 10 )

[node name="Life2" type="Sprite" parent="Bar"]

transform/pos = Vector2( -88.7218, -25.7012 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 10 )

[node name="Life3" type="Sprite" parent="Bar"]

transform/pos = Vector2( -68.7217, -25.7012 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 10 )

[node name="Control" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Scores" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 168.0
margin/right = 719.0
margin/bottom = 319.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 1, 0.784314, 0.0352941, 1 )
text = "0"
align = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ControlDieInformation" type="Control" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="PlayerName" type="Label" parent="Control/ControlDieInformation"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 65.0
margin/top = 1202.0
margin/right = 266.0
margin/bottom = 1281.0
custom_fonts/font = SubResource( 2 )
text = "Tiagosito"
align = 1
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = 3

[node name="Star" type="Sprite" parent="Control/ControlDieInformation"]

transform/pos = Vector2( 36.0449, 1229.16 )
texture = ExtResource( 13 )
modulate = Color( 1, 0.784314, 0.0352941, 1 )

[node name="Cros" type="Sprite" parent="Control/ControlDieInformation"]

transform/pos = Vector2( 295.986, 1231.65 )
texture = ExtResource( 14 )

[node name="Record" type="Button" parent="Control/ControlDieInformation"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 338.0
margin/top = 1200.0
margin/right = 523.0
margin/bottom = 1274.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Record"
flat = false

[node name="PlayAgain" type="Button" parent="Control/ControlDieInformation"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 530.0
margin/top = 1200.0
margin/right = 715.0
margin/bottom = 1274.0
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Again"
flat = false

[connection signal="button_up" from="Control/ControlDieInformation/PlayAgain" to="." method="_on_PlayAgain_button_up"]


